# gwpy_account

./: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml  requirements.txt
account/: settings.py  urls.py
account/apps/accounts/: admin.py  constants.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
account/apps/accounts/migrations/: 0001_initial.py  0002_account_orig_pk.py  0002_alter_account_amount.py  0003_remove_account_orig_pk.py  0004_remove_account_amount_account_assigned_category.py  0005_rename_source_account_title_and_more.py  0006_rename_assigned_category_account_category.py  0007_account_workspace.py  0008_alter_account_workspace.py  0009_account_kind.py
account/apps/budget/: admin.py  constants.py  entities.py  exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
account/apps/budget/migrations/: 0001_initial.py  0002_alter_budget_category.py  0002_budget_orig_pk.py  0003_remove_budget_orig_pk.py  0004_budget_recurrent.py  0005_budget_currency.py  0006_budget_user.py  0007_auto_20220810_1242.py  0008_auto_20220810_1251.py  0009_alter_budget_currency_alter_budget_user.py  0010_budgetamount.py  0011_budget_amount_data_migration.py  0012_alter_budgetamount_budget.py  0013_alter_budget_amount.py  0014_rename_budgetamount_budgetmulticurrency.py  0015_alter_budget_unique_together.py  0016_budget_workspace.py  0017_auto_20230802_0912.py  0018_alter_budget_workspace.py  0019_alter_budget_category.py  0020_alter_budget_budget_date.py  0021_alter_budget_description.py  0022_alter_budget_recurrent.py  0023_budgetseries_budgetseriesexception_and_more.py  0024_migrate_recurrent_to_series.py  0025_alter_budget_recurrent_and_more.py
account/apps/budget/services/: __init__.py  budget_service.py  duplication_service.py  entity_transformer.py  multicurrency_service.py  reporting_service.py  series_service.py
account/apps/budget/tests/: __init__.py  test_recurrent_conversion.py  test_reporting_integration.py  test_series_creation.py  test_series_service.py  test_series_stop.py
account/apps/categories/: admin.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
account/apps/categories/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_category_orig_pk.py  0003_remove_category_orig_pk.py  0004_category_type.py  0005_remove_category_is_income.py  (+12 more)
account/apps/currencies/: admin.py  models.py  serializers.py  urls.py  views.py
account/apps/rates/: admin.py  converters.py  entities.py  filters.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
account/apps/roles/: constants.py  models.py  serializers.py  urls.py  views.py
account/apps/transactions/: entities.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
account/apps/users/: constants.py  entities.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
account/apps/workspaces/: admin.py  filters.py  models.py  permissions.py
fly-account/: Category reassign.bru  Category update.bru  bruno.json
(+43 files in other folders)
