[project]
name = "mspy-account"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "psycopg2-binary<3.0.0,>=2.9.6",
    "djangorestframework<4.0.0,>=3.13.1",
    "django<5.0,>=4.0",
    "django-cors-headers<4.0.0,>=3.11.0",
    "djangorestframework-camel-case<2.0.0,>=1.3.0",
    "python-dateutil<3.0.0,>=2.8.2",
    "uvicorn<1.0.0,>=0.21.1",
    "gunicorn<21.0.0,>=20.1.0",
    "psycopg2<3.0.0,>=2.9.6",
    "django-environ<1.0.0,>=0.10.0",
    "whitenoise<7.0.0,>=6.5.0",
    "pydantic<3.0.0,>=2.5.3",
]

[dependency-groups]
dev = [
    "black<23.0.0,>=22.3.0",
    "isort<6.0.0,>=5.10.1",
    "parameterized>=0.9.0",
    "pytest>=8.3.5",
]
