[project]
name = "mspy-account"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "psycopg2-binary<3.0.0,>=2.9.6",
    "djangorestframework<4.0.0,>=3.13.1",
    "django<5.0,>=4.0",
    "django-cors-headers<4.0.0,>=3.11.0",
    "djangorestframework-camel-case<2.0.0,>=1.3.0",
    "python-dateutil<3.0.0,>=2.8.2",
    "uvicorn<1.0.0,>=0.21.1",
    "gunicorn<21.0.0,>=20.1.0",
    "psycopg2<3.0.0,>=2.9.6",
    "django-environ<1.0.0,>=0.10.0",
    "whitenoise<7.0.0,>=6.5.0",
    "pydantic<3.0.0,>=2.5.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88  # Match black's default

[tool.ruff.lint]
# Select the rule groups you want to enable
extend-select = ["I"]  # Enable isort rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Configure import sorting (isort replacement)
known-first-party = ["budget", "categories", "currencies", "rates", "transactions", "users", "workspaces", "accounts", "roles"]
known-third-party = ["django", "rest_framework", "dateutil", "psycopg2", "uvicorn", "gunicorn"]

[tool.ruff.format]
# Configure code formatting (black replacement)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
